--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
 
     <TextView
         android:id="@+id/resultTextView"
-        android:layout_width="223dp"
+        android:layout_width="314dp"
         android:layout_height="23dp"
         android:layout_marginBottom="20dp"
         android:text="Reponse"
@@ -73,5 +73,16 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <TextView
+        android:id="@+id/boxTest"
+        android:layout_width="146dp"
+        android:layout_height="33dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/resultTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/RadioGroup" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
