--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -4,12 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background1"
     tools:context=".HomePage">
 
     <Button
         android:id="@+id/startBtn"
+        style="@style/Widget.AppCompat.Button"
         android:layout_width="155dp"
         android:layout_height="41dp"
+
         android:text="Commencer"
         app:layout_constraintBottom_toTopOf="@+id/easybtn"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,4 +52,5 @@
         app:layout_constraintEnd_toEndOf="@+id/mediumBtn"
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="@+id/mediumBtn" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
