--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.21"
+        app:layout_constraintVertical_bias="0.049"
         app:srcCompat="@android:drawable/ic_menu_gallery" />
 
     <Button
@@ -46,9 +46,8 @@
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/resultTextView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/boxQuestion">
+        app:layout_constraintEnd_toEndOf="@+id/playSound"
+        app:layout_constraintStart_toStartOf="@+id/playSound">
 
         <RadioButton
             android:id="@+id/Choice1"
@@ -83,13 +82,24 @@
 
     <TextView
         android:id="@+id/boxQuestion"
-        android:layout_width="369dp"
-        android:layout_height="31dp"
+        android:layout_width="401dp"
+        android:layout_height="32dp"
         android:gravity="center"
         android:text="TextView"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <ImageButton
+        android:id="@+id/playSound"
+        android:layout_width="72dp"
+        android:layout_height="41dp"
+        android:background="#ccc"
+        app:layout_constraintBottom_toTopOf="@+id/RadioGroup"
+        app:layout_constraintEnd_toEndOf="@+id/boxQuestion"
+        app:layout_constraintStart_toStartOf="@+id/boxQuestion"
+        app:layout_constraintTop_toBottomOf="@+id/boxQuestion"
+        app:srcCompat="@android:drawable/ic_media_play" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
