--- a/app/src/main/res/layout/activity_about_page.xml
+++ b/app/src/main/res/layout/activity_about_page.xml
@@ -8,10 +8,10 @@
     tools:context=".AboutPage">
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/apropos"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="A propos"
+        android:text="testapropos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.11"
@@ -20,10 +20,10 @@
         app:layout_constraintVertical_bias="0.04" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/teamName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="China Town"
+        android:text="team"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.767"
@@ -32,10 +32,10 @@
         app:layout_constraintVertical_bias="0.396" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/team"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="by: Teddy, Kevin, Yuyuan"
+        android:text="teamname"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.875"
