--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -13,6 +13,7 @@
         android:layout_width="155dp"
         android:layout_height="41dp"
 
+        android:background="@android:drawable/button_onoff_indicator_off"
         android:text="Commencer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,6 +26,7 @@
         android:layout_width="155dp"
         android:layout_height="41dp"
         android:layout_marginTop="40dp"
+        android:background="@android:drawable/button_onoff_indicator_off"
         android:text="A propos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/startBtn"
@@ -38,6 +40,7 @@
         android:layout_width="155dp"
         android:layout_height="41dp"
         android:layout_marginTop="40dp"
+        android:background="@android:drawable/button_onoff_indicator_off"
         android:text="Réponses"
         app:layout_constraintEnd_toEndOf="@+id/startBtn"
         app:layout_constraintHorizontal_bias="0.0"
@@ -48,14 +51,16 @@
         android:id="@+id/textView5"
         android:layout_width="197dp"
         android:layout_height="34dp"
-        android:background="#cccccc"
+        android:background="#00CCCCCC"
         android:gravity="center"
         android:text="Apprendre le chinois"
         android:textColor="#004040"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/startBtn"
         app:layout_constraintEnd_toEndOf="@+id/startBtn"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/startBtn"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.693" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
