--- a/app/src/main/res/layout/activity_score_page.xml
+++ b/app/src/main/res/layout/activity_score_page.xml
@@ -10,7 +10,7 @@
         android:id="@+id/difficulty_quiz"
         android:layout_width="281dp"
         android:layout_height="35dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="88dp"
         android:gravity="center_horizontal"
         android:text="Difficulté"
         android:textAlignment="center"
@@ -24,13 +24,13 @@
         android:id="@+id/score_purcent"
         android:layout_width="379dp"
         android:layout_height="199dp"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:text="100%"
         android:textAlignment="center"
-        android:textSize="150sp"
+        android:textSize="100sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/score_good_total"
-        app:layout_constraintHorizontal_bias="0.562"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="@+id/score_good_total"
         app:layout_constraintTop_toBottomOf="@+id/score_good_total" />
 
@@ -44,18 +44,20 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/score_purcent"
         app:layout_constraintTop_toBottomOf="@+id/score_purcent"
-        app:layout_constraintVertical_bias="0.325" />
+        app:layout_constraintVertical_bias="0.27" />
 
     <TextView
         android:id="@+id/score_good_total"
-        android:layout_width="235dp"
-        android:layout_height="170dp"
+        android:layout_width="226dp"
+        android:layout_height="73dp"
+        android:layout_marginTop="80dp"
         android:gravity="center_horizontal"
         android:text="0/0"
         android:textAlignment="center"
-        android:textSize="100sp"
+        android:textSize="50sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/difficulty_quiz"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="@+id/difficulty_quiz"
         app:layout_constraintTop_toBottomOf="@+id/difficulty_quiz" />
 
